avance en vista de agregar proyecto

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,13 +17,18 @@
         <script src="models.js"></script>
         <!--Importar js de login-->
         <script src="login.js"></script>
+        <!--Importar js de proyectos-->
+        <script src="proyectos.js"></script>
+        <!--Importar sockjs y stomp-->
+        <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+        <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     </head>
 
     <body>
         <div id="usr" class="mui--text-center mui-panel">
             <h1>Nombre</h1><br>
             <div id="nombre" class="mui-textfield">
-                <input type="text" placeholder="Enter Username" id="uname" required oninvalid="setCustomValidity('Por favor ingrese un nombre de usuario')">
+                <input type="text" placeholder="Ingrese nombre de usuario" id="uname" required oninvalid="setCustomValidity('Por favor ingrese un nombre de usuario')">
             </div>
             <button type="submit" class="mui-btn mui-btn--raised" onclick="setName()">
                 Login
@@ -36,13 +41,20 @@
                     <h2>Mis Proyectos</h2>
                 </div>
                 <div class="mui-col-md-4">
-                    <button class="mui-btn mui-btn--primary">
+                    <button class="mui-btn mui-btn--raised mui-btn--primary" onclick="formAgregarProyecto()">
                         <i class="fa fa-plus-square"></i>
                         Crear nuevo proyecto</button>
+                    <div id="newP" hidden="hidden">
+                        <input type="text" placeholder="Ingrese nombre del proyecto" id="nomP" required oninvalid="setCustomValidity('Por favor ingrese un nombre de proyecto')">
+                        <input type="text" placeholder="Ingrese descripción del proyecto" id="descP" required oninvalid="setCustomValidity('Por favor ingrese una descripción del proyecto')">
+                        <button type="submit" class="mui-btn mui-btn--raised mui-btn--danger" onclick="agregarProyecto()">
+                            Crear
+                        </button>
+                    </div>
                 </div>
             </div>
             <div id="proyectosdiv">
-                <table id="proyectos" class="mui-table">
+                <table id="proyectos" class="mui-table mui-table--bordered">
                     <thead>
                         <tr>
                             <th>Nombre</th>
@@ -53,7 +65,7 @@
                             <th>Compartir</th>
                         </tr>
                     </thead>
-
+                    <tbody id="lista"></tbody>
                 </table>
             </div>
         </div>
