Creando la funcion compartir

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,7 @@
         <!--Importar js de proyectos-->
         <script src="proyectos.js"></script>
         <!--Importar sockjs y stomp-->
+        <script src="share.js"></script>
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     </head>
