--- a/src/main/resources/static/proyectos.html
+++ b/src/main/resources/static/proyectos.html
@@ -8,19 +8,16 @@
         <script src="//cdn.muicss.com/mui-0.9.3/js/mui.min.js"></script>
         <!--Importar Iconos font Awesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" type=" text/css">
-        <!--Importar styles.css-->
-        <link rel="stylesheet" type="text/css" href="styles.css">
         <!--Importar JQuery-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
         <!--Importar modelos js-->
         <script src="models.js"></script>
-        <!--Importar js de login-->
-        <script src="login.js"></script>
         <!--Importar js de proyectos-->
         <script src="proyectos.js"></script>
-        <!--Importar sockjs y stomp-->
+        <!--Importar share.js-->
         <script src="share.js"></script>
+        <!--Importar sockjs y stomp-->
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     </head>
