--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,6 @@
         <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="login.js"></script>
         <script src="sha1.js"></script>
@@ -29,7 +28,7 @@
                 </input>
                 <div id="mensaje">
                     <div class="alert alert-danger">
-                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        <button id="x" onclick="hideMessage()" type="button" class="btn btn-link">x</button>
                         <strong>Por favor, intentelo de nuevo.</strong>
                         <br/>
                         Los datos ingresados son incorrectos.
