--- a/src/main/resources/static/diagramas.html
+++ b/src/main/resources/static/diagramas.html
@@ -8,19 +8,11 @@
         <script src="//cdn.muicss.com/mui-0.9.3/js/mui.min.js"></script>
         <!--Importar Iconos font Awesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" type=" text/css">
-        <!--Importar styles.css-->
-        <link rel="stylesheet" type="text/css" href="styles.css">
         <!--Importar JQuery-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
         <!--Importar modelos js-->
         <script src="models.js"></script>
-        <!--Importar js de login-->
-        <script src="login.js"></script>
-        <!--Importar js de proyectos-->
-        <script src="proyectos.js"></script>
-        <!--Importar sockjs y stomp-->
-        <script src="share.js"></script>
         <!--Importar js de diagramas-->
         <script src="diagramas.js"></script>
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
@@ -29,7 +21,7 @@
 
     <body>
         <div id="diagramas">
-            <h1 id="usrnm"></h1>
+            <h1 id="usrnmD"></h1>
             <h2 id="proNme"></h2>
             <div class="mui-row">
                 <div class="mui-col-md-8">
