Agregando Elemento al model.js y cambiando la vista de diagramas

--- a/src/main/resources/static/diagramas.html
+++ b/src/main/resources/static/diagramas.html
@@ -38,6 +38,9 @@
                             Crear
                         </button>
                     </div>
+                    <button type="submit" class="mui-btn mui-btn--raised" onclick="accederDiagrama()"><i class="fa fa-rocket"></i>
+                        Acceder
+                    </button>
                 </div>
             </div>
             <div id="diagramasdiv">
