--- a/src/main/resources/static/proyectos.html
+++ b/src/main/resources/static/proyectos.html
@@ -26,7 +26,14 @@
 
     <body>
         <div id="proyectos">
-            <h1 id="usrnm"></h1>
+            <div class="mui-col-md-10">
+                <h1 id="usrnm"></h1>
+            </div>
+            <div class="mui-col-md-2">
+                <button id="logout" onclick="volver()" class="mui-btn mui-btn--raised">
+                    <i class="fa fa-fast-backward"></i>
+                    cerrar sesión</button>
+            </div>
             <div class="mui-row">
                 <div class="mui-col-md-8">
                     <h2>Mis Proyectos</h2>
