--- a/src/main/resources/static/lienzoDiagramas.html
+++ b/src/main/resources/static/lienzoDiagramas.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <title>UMLColaborativo</title>
@@ -14,24 +13,23 @@
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+        <script src="jcanvas.min.js"></script>
         <script src="lienzoDiagramas.js"></script>
     </head>
     <body>
         <div id="contenedor">
-            <div id="cabecera">
-            </div>
+            <div id="cabecera"></div>
 
             <div id="menu">
-                <div id="infousuario">
-
-
-                </div>
+                <div id="infousuario"></div>
                 <div id="elementos">
-                    <center><h1> Elementos </h1></center>
                     <center>
-                        <ul id="conceptos">
-
-                        </ul>
+                        <h1>
+                            Elementos
+                        </h1>
+                    </center>
+                    <center>
+                        <ul id="conceptos"></ul>
 
                         <button id="guardar" class="mui-btn mui-btn--raised mui-btn--primary" onclick="">
                             <i class="fa fa-floppy-o"></i>
@@ -44,13 +42,16 @@
 
             <div id="contenido">
                 <div id="principal">
-                    <center><h1 id="tituloDiagrama"> Título del diagrama</h1></center>
-                    <canvas id="lienzo"> </canvas>
+                    <center>
+                        <h1 id="tituloDiagrama">
+                            Título del diagrama</h1>
+                    </center>
+                    <div id="canvasdiv"></div>
+                    <!--canvas id="lienzo" width="600px" height="400px"></canvas-->
                 </div>
             </div>
 
-            <div id="pie">
-            </div>
+            <div id="pie"></div>
         </div>
     </body>
 </html>
