ya hay relaciones (o algo así)

--- a/src/main/resources/static/lienzoDiagramas.html
+++ b/src/main/resources/static/lienzoDiagramas.html
@@ -20,7 +20,10 @@
     </head>
     <body>
         <div id="contenedor">
-            <center><div id="cabecera" ><img src="Imagenes/cabecera.jpg"/> </div></center>
+            <center>
+                <div id="cabecera"><img src="Imagenes/cabecera.jpg"/>
+                </div>
+            </center>
 
             <div id="menu">
                 <div id="infousuario"></div>
@@ -40,10 +43,19 @@
                     </center>
                     <center>
                         <h1>
+                            Relaciones
+                        </h1>
+                    </center>
+                    <div id="formulario" hidden="true"></div>
+                    <div id="relaciones"></div>
+                    <center>
+                        <h1>
                             Elementos
                         </h1>
                     </center>
-                    <ul id="conceptos"></ul>
+                    <div>
+                        <ul id="conceptos"></ul>
+                    </div>
 
                 </div>
 
@@ -55,9 +67,7 @@
                         <h1 id="tituloDiagrama">
                             Título del diagrama</h1>
                     </center>
-                    <div id="canvasdiv">
-
-                    </div>
+                    <div id="canvasdiv"></div>
                 </div>
             </div>
         </div>
