--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
         <title>UML Colaborativo</title>
         <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="login.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="login.js"></script>
@@ -15,17 +16,14 @@
     <body class="fondo">
 
         <div id="login">
-            <h1 id="header">UMLColaborativo <img src="Imagenes/uml-logo.png" alt="UML logo" style="width:100px;height:80px;"></h1>
+            <h1 id="header">UMLColaborativo
+                <img src="Imagenes/uml-logo.png" alt="UML logo" style="width:100px;height:80px;"></h1>
             <form>
-                <input type="text" placeholder="Usuario" id="username">
-                </input>
+                <input type="text" placeholder="Usuario" id="username"></input>
                 <br/>
-                <input id="passwd" type="password" placeholder="Contraseña"> 
-                </input>
+                <input id="passwd" type="password" placeholder="Contraseña"></input>
                 <br/>
-                <input type="button" value="Ingresar" id="button" onclick="validar()">
-
-                </input>
+                <input type="button" value="Ingresar" id="button" onclick="validar()"></input>
                 <div id="mensaje">
                     <div class="alert alert-danger">
                         <button id="x" onclick="hideMessage()" type="button" class="btn btn-link">x</button>
@@ -36,7 +34,6 @@
                 </div>
             </form>
         </div>
-
 
     </body>
 
